# disscube

./: .gitignore  404.html  README.md  catalog.db  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architecture/catalog/: index.html
architecture/overview/: index.html
disscube/: __init__.py  derivation.py
docs/: index.md  terrame_fill_correspondence.md
examples/: 01_basics.py  02_zonal_stats.py  03_mangrove_analysis.py  04_lucc_pipeline.py  05_proximity.py  06_bdc_derivation.py  07_brazil_slope_derivation.py  README.md  example_02_lucc.py  example_03_brmangue.py  example_04_lucc.py  example_05_distance.py  export_zarr_to_tif.py  lucc_pipeline.py  lucc_pipeline_temporal.py  mangrove_analysis.py  test_anchoring.py  verify_bdc_tifs.py  view_acre.py
scripts/: 00_import_bdc_tiles.py  01_setup_catalog.py  02_register_drivers.py  03_derive_acre_drivers.py  04_derive_acre_1km_drivers.py  05_ilha_maranhao_mapbiomas.py  add_60m_grid.py  derive_ti_presence.py  import_bdc_tiles.py  list_sources.py  register_acre_grid_5km.py  register_br_5km_tiles.py  register_brazil_grid_5km.py  register_brazil_slope.py  setup_data.py
search/: search_index.json
tests/: test_aggregator.py  test_aligner.py  test_aligner_resampling.py  test_bdc_master_grids.py  test_derivation.py  test_geometry.py  test_grid_relations.py  test_models.py  test_mutation.py  test_percentage_purity.py  test_roundtrip.py  test_spec_hash.py  test_temporal.py
tools/: check_hash.py  create_acre_1km_grid.py  create_acre_snapped_grid.py  debug_acre.py  import_bdc_tiles.py  inspect_raster.py  inspect_ti.py  inspect_zarr.py  list_grids.py  verify_bdc.py  view_acre.py  zarr_to_tif.py
(+70 files in other folders)
