[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disscube"
version = "0.2.0"
description = "Declarative Spatial Layer for Dynamic Models"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sergio" }
]
dependencies = [
    "pydantic>=2.0",
    "xarray",
    "zarr",
    "rasterio",
    "geopandas",
    "shapely",
    "scipy",
    "numpy",
    "pandas",
    "pyproj",
    "fsspec",
    "toml",
    "rioxarray",
    "affine",
    "fastapi",
    "uvicorn",
    "dissmodel>=0.6.0,<0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
]
bdc = [
    "fiona",
]
s3 = [
    "s3fs",
]
api = [
    "python-multipart",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["disscube*"]
